--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "서신서스케쥴",
-  "short_name": "서신서스케쥴",
+  "name": "주내힘교회 하반기 성경읽기 스케쥴",
+  "short_name": "주내힘교회 하반기 성경읽기 스케쥴",
   "start_url": "",
   "display": "standalone",
   "background_color": "#ffffff",
